--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@types/express": "^4.17.7",
     "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mongodb": "^3.5.9"
   },
   "devDependencies": {
+    "@types/mongodb": "^3.5.25",
     "@types/node": "^14.0.27",
     "@typescript-eslint/parser": "^3.7.1",
     "eslint": "^7.5.0",
